--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,13 +24,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_launcher_icons: "^0.8.1"
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.18.0+1
-  google_sign_in: ^4.5.3
+  firebase_core: ^1.0.0
+  firebase_auth: ^1.0.0
+  google_sign_in: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -40,7 +42,10 @@ dev_dependencies:
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
+flutter_icons:
+  image_path: "assets/icon-48.png"
+  android: true
+  ios: true
 # The following section is specific to Flutter.
 flutter:
 
@@ -49,8 +54,11 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+
+
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - assets/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
