--- a/local.properties
+++ b/local.properties
@@ -6,3 +6,4 @@
 # header note.
 #Sun Feb 28 19:21:41 CET 2021
 sdk.dir=C\:\\Users\\Damien\\AppData\\Local\\Android\\Sdk
+MAPS_API_KEY=AIzaSyDjKximQQBVnkjG6U-Yyg3zXlLkSoGwWpE
