--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
+  location: ^2.3.5
+  google_maps_flutter: ^0.5.11+1
   flutter:
     sdk: flutter
 
@@ -31,6 +33,8 @@ dependencies:
   firebase_core: ^0.5.0
   firebase_auth: ^0.18.0+1
   google_sign_in: ^4.5.3
+  geolocator : 6.2.1
+  geocoding: ^1.0.2
 
 dev_dependencies:
   flutter_test:
@@ -53,7 +57,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+  assets :
+    - map_style.json
+    - images/profil_picture_1.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
