--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   google_sign_in: ^4.5.3
   geolocator : 6.2.1
   geocoding: ^1.0.2
+  flutter_polyline_points: ^0.1.0
 
 dev_dependencies:
   flutter_test:
@@ -58,8 +59,8 @@ flutter:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
   assets :
-    - map_style.json
-    - images/profil_picture_1.png
+    - assets/
+
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
