--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,8 +21,8 @@ environment:
   sdk: ">=2.7.0 <3.0.0"
 
 dependencies:
-  location: ^2.3.5
-  google_maps_flutter: ^0.5.11+1
+  location: ^3.2.4
+  google_maps_flutter: ^2.0.1
   flutter:
     sdk: flutter
 
@@ -30,18 +30,18 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.1
-  firebase_core: ^0.5.0
-  firebase_auth: ^0.18.0+1
-  google_sign_in: ^4.5.3
+  ##firebase_core: ^0.5.0
+  #firebase_auth: ^0.18.0+1
+  #google_sign_in: ^4.5.3
   geolocator : 6.2.1
   geocoding: ^1.0.2
-  flutter_polyline_points: ^0.1.0
+  flutter_polyline_points: ^0.2.4
 
 dev_dependencies:
-  flutter_test:
-    sdk: flutter
-  integration_test:
-    sdk: flutter
+  #flutter_test:
+    #sdk: flutter
+  #integration_test:
+    #sdk: flutter
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
