--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,7 @@ dependencies:
   geolocator : 6.2.1
   geocoding: ^1.0.2
   flutter_polyline_points: ^0.2.4
-
+  path_provider : ^1.4.4
 dev_dependencies:
   #flutter_test:
     #sdk: flutter
