--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
+
+  http: ^0.13.0
+  http_parser: ^4.0.0
   cupertino_icons: ^1.0.1
   firebase_core: ^1.0.0
   firebase_auth: ^1.0.0
+  firebase_auth_web: ^1.0.0
   google_sign_in: ^5.0.0
+  chips_choice: ^2.0.1
 
 dev_dependencies:
   flutter_test:
